[gd_scene load_steps=7 format=3 uid="uid://dg7uiy57g1n7k"]

[ext_resource type="Theme" uid="uid://c720yo72r5nrm" path="res://UI/Themes/DefaultTheme.theme" id="1_godhi"]
[ext_resource type="Script" uid="uid://b1ca5ptxe28bs" path="res://UI/Scripts/docked_ui.gd" id="1_vlfuv"]
[ext_resource type="Texture2D" uid="uid://j0j5uxyvxk6v" path="res://Assets/UI_Assets/Misc/GradientCenter796x10.png" id="2_6vdpa"]
[ext_resource type="FontFile" uid="uid://cho13riygas28" path="res://UI/fonts/SairaCondensed-Regular.ttf" id="2_wreyr"]
[ext_resource type="Texture2D" uid="uid://bfpffqgfxkpd5" path="res://Assets/Space Assets/SpaceBackgrounds/2560x1440px/08.jpg" id="5_e7egf"]

[sub_resource type="Theme" id="Theme_q1ram"]
default_font = ExtResource("2_wreyr")
Button/font_sizes/font_size = 48

[node name="DockedUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vlfuv")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_e7egf")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2"]
visible = false
layout_mode = 2
texture = ExtResource("2_6vdpa")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="PlanetType" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_godhi")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Planet Type"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="PlanetFaction" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer3/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_godhi")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Planet Faction"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2

[node name="PlanetName" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer4/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_godhi")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Planet Name"
horizontal_alignment = 1

[node name="UnDockBTN" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
theme = SubResource("Theme_q1ram")
text = "UNDOCK"
